[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/sort_Display.gd" type="Script" id=1]
[ext_resource path="res://Scripts/Menu.gd" type="Script" id=2]
[ext_resource path="res://Spartan.tres" type="DynamicFont" id=4]
[ext_resource path="res://Spartan_Bold.tres" type="DynamicFont" id=5]
[ext_resource path="res://Sprites/UI/menu_white.png" type="Texture" id=6]

[node name="Root" type="Node2D"]
script = ExtResource( 1 )

[node name="Background" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Background"]
margin_top = 1.0
margin_right = 576.0
margin_bottom = 1025.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.109804, 0.105882, 0.101961, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Comp√©tences" type="Label" parent="."]
margin_left = 182.408
margin_top = 6.0
margin_right = 359.408
margin_bottom = 79.0
custom_fonts/font = ExtResource( 4 )
text = "Sorts"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Content Holder" type="VBoxContainer" parent="."]
margin_left = 24.0
margin_top = 88.0
margin_right = 552.0
margin_bottom = 1020.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit" type="LineEdit" parent="Content Holder"]
margin_right = 528.0
margin_bottom = 24.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sort" type="ScrollContainer" parent="Content Holder"]
margin_top = 28.0
margin_right = 528.0
margin_bottom = 798.0
rect_min_size = Vector2( 528, 770 )
follow_focus = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DiplayList" type="VBoxContainer" parent="Content Holder/Sort"]
margin_right = 528.0
margin_bottom = 770.0
rect_min_size = Vector2( 0, 100 )
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="Node2D" parent="."]
script = ExtResource( 2 )

[node name="ColorRect2" type="ColorRect" parent="Menu"]
margin_left = -2.0
margin_right = 94.0
margin_bottom = 80.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuBtn" type="TextureButton" parent="Menu"]
margin_left = 8.0
margin_right = 520.0
margin_bottom = 512.0
rect_scale = Vector2( 0.15, 0.15 )
size_flags_horizontal = 0
size_flags_vertical = 0
texture_normal = ExtResource( 6 )
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Menu"]
margin_left = -320.0
margin_right = -1.0
margin_bottom = 1024.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Menu"]
margin_left = -312.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = 1016.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Accueil" type="Button" parent="Menu/VBoxContainer"]
margin_right = 304.0
margin_bottom = 1008.0
size_flags_vertical = 3
custom_fonts/font = ExtResource( 5 )
text = "Accueil"

[node name="TweenMenu" type="Tween" parent="Menu"]

[node name="CompDescription" type="AcceptDialog" parent="."]
visible = true
margin_top = -420.0
margin_right = 520.0
margin_bottom = -352.0
popup_exclusive = true
window_title = "Alerte !"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CompDescriptionPopUp" type="RichTextLabel" parent="CompDescription"]
margin_left = 8.0
margin_top = 8.0
margin_right = 512.0
margin_bottom = 32.0
bbcode_enabled = true
fit_content_height = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="text_changed" from="Content Holder/LineEdit" to="." method="_on_LineEdit_text_changed"]
[connection signal="pressed" from="Menu/MenuBtn" to="." method="_on_MenuBtn_pressed"]
[connection signal="pressed" from="Menu/VBoxContainer/Accueil" to="." method="_on_Accueil_pressed"]
[connection signal="meta_clicked" from="CompDescription/CompDescriptionPopUp" to="." method="display_comp"]
